--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--tells web browsers that the website is a HTML page-->
+<!DOCTYPE html> 
 <html> <!--the html document opening tag indicating where the code starts-->
     <head> <!--a tag containing the site's metadata-->
         <title> <!--defines the text shown on the browser tab when visiting the web page-->
