--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html> 
 <html> <!--the html document opening tag indicating where the code starts-->
     <head> <!--a tag containing the site's metadata-->
-        <title> <!--defines the text shown on the browser tab when visiting the web page-->
+        <title>
             Anna's Website
-        </title>
+        </title> <!--defines the text shown on the browser tab when visiting the web page-->
     </head>
     <body> <!--contains all visible content on the web page-->
         <header> Anna's Website </header> <!--container for introductory content or navigation-->
