--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head> <!--a tag containing the site's metadata-->
         <title>
             Anna's Website
-        </title> <!--defines the text shown on the browser tab when visiting the web page-->
+        </title> 
     </head>
     <body> <!--contains all visible content on the web page-->
         <header> Anna's Website </header> <!--container for introductory content or navigation-->
